  * Sbuild.built & Sbuild.builtFor no longer force Sbuild.keygenGenerated.
    This is only required for squeeze chroots, which we don't support anyway.
  * Sbuild haddock improvements:
    - State that we don't support squeeze and Buntish older than trusty
    - Update sample ~/.sbuildrc for sbuild 0.71.0
    - Add hint for customising chroots with propellor

 -- Joey Hess <id@joeyh.name>  Sun, 24 Jul 2016 13:34:37 -0400

propellor (3.1.1) unstable; urgency=medium

  * Haddock build fix.
    Thanks, Sean Whitton

 -- Joey Hess <id@joeyh.name>  Thu, 23 Jun 2016 08:12:57 -0400

propellor (3.1.0) unstable; urgency=medium

  * Architecture changed from String to an ADT. (API Change)
    Transition guide: Change "amd64" to X86_64, "i386" to X86_32,
    "armel" to ARMEL, etc.
    Thanks, Félix Sipma.
  * The Debian data type now includes a DebianKernel. (API Change)
    This won't affect most config.hs, as osDebian defaults to
    Linux. Added osDebian' can be used to specify a different kernel.
    Thanks, Félix Sipma.
  * Improve exception handling. A property that threw a non-IOException
    used to stop the whole propellor run. Now, all non-async exceptions
    only make the property that threw them fail. (Implicit API change)
  * Added StopPropellorException and stopPropellorMessage which can be
    used in the unusual case where a failure of one property should stop
    propellor from trying to ensure any other properties.
  * tryPropellor returns Either SomeException instead of Either IOException
    (API change)
  * Switch letsencrypt to certbot package name.
  * Sbuild: Add keyringInsecurelyGenerated which is useful on throwaway
    build VMs.
    Thanks, Sean Whitton
  * Added Propellor.Property.SiteSpecific.Exoscale.
    Thanks, Sean Whitton
  * Property.Reboot: Added toDistroKernel and toKernelNewerThan.
    Thanks, Sean Whitton
  * Added ConfFile.hasIniSection.
    Thanks, Félix Sipma.
  * Apt.install: When asked to install a package that apt does not know