@@ -15,6 +15,7 @@ propellor (3.1.2) UNRELEASED; urgency=medium
     - State that we don't support squeeze and Buntish older than trusty
     - Update sample ~/.sbuildrc for sbuild 0.71.0
     - Add hint for customising chroots with propellor
+    - Update example usage of System type.
 
  -- Joey Hess <id@joeyh.name>  Sun, 24 Jul 2016 13:34:37 -0400
 
